[WEBDEV-352] - Updated public folder error pages

--- a/public/422.html
+++ b/public/422.html
@@ -4,10 +4,10 @@
   <title>The change you wanted was rejected (422)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link href="https://s3-eu-west-1.amazonaws.com/web1live.pugin-website/1.4.11/stylesheets/main.css" rel="stylesheet">
+  <link href="https://s3-eu-west-1.amazonaws.com/web1live.pugin-website/1.6.3/stylesheets/main.css" rel="stylesheet">
 </head>
 
-<body class="has-js">
+<body>
   <a class='sr-only sr-only--focusable' href='#content' id='skiplink'>Skip to main content</a>
 
   <header>
