[WEBSITE-2148] tabindex=0 for id=content

--- a/public/422.html
+++ b/public/422.html
@@ -41,7 +41,7 @@
     </div>
   </header>
 
-  <main id="content">
+  <main id="content" tabindex="0">
     <div class="section--primary">
       <div class="container">
         <h1>The change you wanted was rejected</h1>
