--- a/public/404.html
+++ b/public/404.html
@@ -41,7 +41,7 @@
     </div>
   </header>
 
-  <main id="content">
+  <main id="content" tabindex="0">
     <div class="section--primary">
       <div class="container">
         <h1>This page doesn't exist</h1>
