--- a/public/500.html
+++ b/public/500.html
@@ -41,7 +41,7 @@
     </div>
   </header>
 
-  <main id="content">
+  <main id="content" tabindex="0">
     <div class="section--primary">
       <div class="container">
         <h1>Sorry - something has gone wrong</h1>
