--- a/public/500.html
+++ b/public/500.html
@@ -5,8 +5,8 @@
   <title>We're sorry, but something went wrong (500)</title>
   <meta content='width=device-width, initial-scale=1.0' name='viewport'>
   <meta content='IE=edge' http-equiv='X-UA-Compatible'>
-  <link href="https://s3-eu-west-1.amazonaws.com/web1live.pugin-website/1.7.6/stylesheets/main.css" rel="stylesheet">
-  <link href='https://s3-eu-west-1.amazonaws.com/web1live.static-assets/favicon.ico' rel='shortcut icon' type='image/x-icon'>
+  <link href="https://static.parliament.uk/pugin/stylesheets/main.css" rel="stylesheet">
+  <link href='https://static.parliament.uk/assets-public/favicon.ico' rel='shortcut icon' type='image/x-icon'>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -19,10 +19,6 @@
     <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJS8MTG"
   height="0" width="0" style="display:none;visibility:hidden"></iframe>
   </noscript>
-
-  <script>
-    document.body.className = ((document.body.className) ? document.body.className + ' has-js' : 'has-js');
-  </script>
 
   <a class='skip-to-content' href='#content' id='skiplink'>Skip to main content</a>
 
@@ -91,7 +87,7 @@
     </div>
   </footer>
 
-  <script src="https://s3-eu-west-1.amazonaws.com/web1live.pugin-website/1.7.6/javascripts/main.js"></script>
+  <script src="https://static.parliament.uk/pugin/javascripts/main.js"></script>
 </body>
 
 </html>
