Updated error views to include legacy Pugin

--- a/public/500.html
+++ b/public/500.html
@@ -5,6 +5,7 @@
   <title>We're sorry, but something went wrong (500)</title>
   <meta content='width=device-width, initial-scale=1.0' name='viewport'>
   <meta content='IE=edge' http-equiv='X-UA-Compatible'>
+  <link href="https://static.parliament.uk/pugin/stylesheets/legacy.css" rel="stylesheet">
   <link href="https://static.parliament.uk/pugin/stylesheets/main.css" rel="stylesheet">
   <link href='https://static.parliament.uk/assets-public/favicon.ico' rel='shortcut icon' type='image/x-icon'>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -28,13 +29,12 @@
     </div>
   </div>
 
-  <div class='status--banner__beta'>
-    <div class='container'>
-      <span class='hint'>beta</span>
-      <ul class='list--flex'>
-        <li>These pages are being tested. <a href="http://www.smartsurvey.co.uk/s/ukparliament-beta-website-feedback/">Give feedback</a> to help improve them.</li>
-        <li>Go to <a href="http://www.parliament.uk">current website</a></li>
-      </ul>
+  <div class="status--banner__beta">
+    <div class="container">
+      <p>
+        These pages are being tested. <a href="http://www.smartsurvey.co.uk/s/ukparliament-beta-website-feedback/">Give feedback</a> to help improve them.
+        Go to <a href="http://www.parliament.uk">current website</a>
+      </p>
     </div>
   </div>
 
